Changement dans Window : tasks passe de LinkedList à ArrayList